--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -5,7 +5,8 @@ $orange-color: #ff6060;
 .collapse {
   max-width: 1023px;
   border-radius: 10px;
-  margin: 10px;
+
+  margin-bottom:30px ;
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
@@ -42,21 +43,22 @@ $orange-color: #ff6060;
     overflow: hidden;
     transition: max-height 0.3s ease;
     background-color: #f6f6f6;
-    padding: 0 10px;
+    padding: 0 18px;
 
     p {
       margin: 10px 0;
     }
+
   }
 
   .collapse-content.open {
-    max-height: 250px; // Ajustez la hauteur selon le contenu
+    max-height: 250px; 
   }
 }
 
 .collapse.logementCollapse{
   // width: 582px;
-  // border-radius: 10px;
+  border-radius: 10px;
   flex: 1;
 
   .collapse-header {
@@ -73,4 +75,18 @@ $orange-color: #ff6060;
     max-height: 330px; // Ajustez la hauteur selon le contenu
   }
  
+}
+
+.info-collapse-container {
+  // Synchronisation des hauteurs
+  .collapse {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .collapse-content {
+    flex-grow: 1;
+    // overflow: hidden;
+  }
 }
